--- a/src/app/pages/guestlist/dashboard.component.html
+++ b/src/app/pages/guestlist/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid" style="padding:50px;">
-  <h1 style="margin-top: 0px;">Bryllup 2026 - Gjesteliste</h1>
+  <h1 style="margin-top: 0px;">Gjesteliste</h1>
 
   <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center; margin-bottom: 20px;">
     <div style="display: flex; flex-direction: row; align-items: center; font-size: 1.2rem; gap: 20px;">
