--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,2 +1,7 @@
-<div style="padding: 50px; background-color: blue;">
+<div id="sidebar-container">
+    <h1>Bryllup 2026</h1>
+    <div id="navbar-link">
+        <a routerLink="/">Gjesteliste</a>
+        <a routerLink="/budget">Budsjett</a>
+    </div>
 </div>
