--- a/src/app/pages/guestlist/dashboard.component.scss
+++ b/src/app/pages/guestlist/dashboard.component.scss
@@ -2,7 +2,7 @@ table, th, td {
   border: 1px solid;
 }
 th, td {
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 0.5rem !important;
 }
 table {
   width: 100%;
