--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -2,6 +2,6 @@
     <h1>Bryllup 2026</h1>
     <div id="navbar-link">
         <a routerLink="/">Gjesteliste</a>
-        <a routerLink="/budget">Budsjett</a>
+        <a routerLink="/budget">Utgifter</a>
     </div>
 </div>
