--- a/src/app/dialogs/edit-guest-dialog/edit-guest-dialog.component.html
+++ b/src/app/dialogs/edit-guest-dialog/edit-guest-dialog.component.html
@@ -1,7 +1,7 @@
 <div style="padding: 50px;">
     <div class="dialog-header">
         <h2 style="margin-top: 0px;">Rediger gjest</h2>
-        <p>Endre navn eller kategori for <strong>{{ name }}</strong>.</p>
+        <p>Endre gjeste informasjonen for <strong>{{ name }}</strong>.</p>
       </div>
       <form [formGroup]="editGuestForm" (ngSubmit)="editGuest()">
         <mat-form-field appearance="outline" style="width: 100%;">
@@ -17,9 +17,16 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <mat-form-field appearance="outline" style="width: 100%;">
+          <mat-label>Allergier</mat-label>
+          <input matInput placeholder="Allergier.." formControlName="allergies">
+        </mat-form-field>
+        <div style="margin-bottom: 22px;">
+          <mat-checkbox formControlName="best_man">Forlover</mat-checkbox>
+        </div>
         <div style="display: flex; flex-direction: row; gap: 1rem;">
           <button type="button" mat-raised-button (click)="closeDialog(false)">Avbryt</button>
-          <button type="submit" mat-raised-button>Legg til</button>
+          <button type="submit" mat-raised-button>Lagre</button>
         </div>
     </form>
 </div>
