--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,4 +1,7 @@
 #sidebar-container {
+    position: sticky;
+    top: 0;
+    left: 0;
     height: 100vh; 
     padding: 20px; 
     background-color: lightgrey;
