--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,10 @@
 <div id="sidebar-container">
-    <h1>Bryllup 2026</h1>
-    <div id="navbar-link">
-        <a routerLink="/">Gjesteliste</a>
-        <a routerLink="/budget">Utgifter</a>
-    </div>
+  <h1>Bryllup 2026 <i class="fa-solid fa-champagne-glasses"></i></h1>
+  <div id="navbar-link">
+      <a routerLink="/">Gjesteliste</a>
+      <a routerLink="/budget">Utgifter</a>
+      <a routerLink="/tables">Bordplassering</a>
+      <a routerLink="/tables">Utdrikningslag</a>
+      <a routerLink="/tables">Ønskeliste</a>
+  </div>
 </div>
