--- a/src/app/pages/budget/budget.component.html
+++ b/src/app/pages/budget/budget.component.html
@@ -18,7 +18,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of budget">
+        <tr *ngFor="let item of budget" [ngStyle]="{'background-color': paymentStatusColorIndicator(item)}">
           <td>{{ item.description }}</td>
           <td style="text-align: right;">{{ item.estimated_cost | number }}</td>
           <td style="text-align: right;">{{ item.actual_cost | number }}</td>
