--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,20 +1,20 @@
 #sidebar-container {
-    position: sticky;
-    top: 0;
-    left: 0;
-    height: 100vh; 
-    padding: 20px; 
-    background-color: lightgrey;
+  position: sticky;
+  top: 0;
+  left: 0;
+  height: calc(100vh - 40px);
+  padding: 20px;
+  background-color: lightgrey;
 }
 
 #navbar-link {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-} 
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
 #sidebar-container a {
-    font-size: 18px;
-    color: #000;
-    text-decoration: none;
+  font-size: 18px;
+  color: #000;
+  text-decoration: none;
 }
